--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,8 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
+		<script src="%sveltekit.assets%/theme-preferences.js"></script>
+
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
